--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,24 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
+    flavorDimensions "client"
+    productFlavors {
+        nabenik {
+            dimension 'client'
+            resValue 'string', 'app_name', 'Nabenik'
+            applicationId 'org.esvux.demos.demomultiskin.oficinas'
         }
     }
 }
